Implementación borrado de tarjetas en payComponent

--- a/src/app/components/faqs/faqs.component.html
+++ b/src/app/components/faqs/faqs.component.html
@@ -141,7 +141,8 @@
                         </div>
                         <div id="octava" class="accordion-collapse collapse" data-bs-parent="#accordionFirst">
                             <div class="faqs__accordion-button-content accordion-body">
-                                Sí, Aloha almacena tus datos de pago para facilitar la formalización de reservas. Cada vez que introduces información relativa al pago en la plataforma, dicha información se almacena si Aloha no tuviere constancia de la misma, pudiendo acceder a dicha información desde el apartado "Mis tarjetas" en la ventana de pago.
+                                <p>Sí, Aloha almacena tus datos de pago para facilitar la formalización de reservas. Cada vez que introduces información relativa al pago en la plataforma, dicha información se almacena si Aloha no tuviere constancia de la misma, pudiendo acceder a dicha información desde el apartado "Mis tarjetas" en la ventana de pago.</p>
+                                <p>Si deseas eliminar la información de alguna de tus tarjetas que Aloha haya almacenado, puedes hacerlo desde el apartado "Mis tarjetas" de la pantalla de pago cuando pretendas formalizar alguna reserva.</p>
                             </div>
                         </div>
                     </div>
