--- a/src/app/components/pay/pay.component.html
+++ b/src/app/components/pay/pay.component.html
@@ -44,7 +44,7 @@
                         <div class="pay__book-details-info">N° personas</div>
                     </div>
                     <div class="pay__book-details-people">
-                        <div class="pay__book-details-value">{{this.bookPeople}}</div>
+                        <div class="pay__book-details-value">{{this.accoUnit?.capacity}}</div>
                     </div>
                     <div class="pay__book-details-total mt-2">
                         <div class="pay__book-details-info">Total</div>
