Preparación inserción información accommodation-image (cuando se cree en back)

--- a/src/app/components/admin/admin-accommodations/admin-accommodations.component.html
+++ b/src/app/components/admin/admin-accommodations/admin-accommodations.component.html
@@ -225,7 +225,7 @@
                                         <div *ngIf="location.errors?.['maxlength']">Ubicación demasiado extensa</div>
                                     </div>
                                 </div>
-                                <ngx-dropzone (change)="onSelect($event)" class="mb-3">
+                                <ngx-dropzone (change)="onSelect($event)" class="mb-3" accept="image/jpeg,image/jpg,image/png">
                                     <ngx-dropzone-label>Clica o arrastra las imágenes</ngx-dropzone-label>
                                     <ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
                                         <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
